20000331-10:45 EST Paul Tucker <ptucker@sympatico.ca>
   * contrib/rdd_ads/ads1.c
     * updated initSymbols handling

20000331-09:50 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rdd/dbf1.c
   * source/rdd/sdf1.c
   * source/rdd/delim1.c
   * source/rdd/dbfcdx/dbfcdx1.c
   * source/rdd/dbfntx/dbfntx1.c
     * updated initSymbols handling

20000331-06:40 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/diskspac.c
     * minor code opt.

20000331-04:30 EST Paul Tucker <ptucker@sympatico.ca>
   * include/hbvmpub.h
     * put the #pragma pack in _MSC_VER gaurds which got missed in the
       original upload

20000331-01:02 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbapilng.h
   * include/hbdate.h
   * include/hberrors.h
   * include/hbinit.h
   * include/hbtrace.h
     ! Added #include "hbsetup.h" before using HB_EXTERN_C.

   * doc/howtomak.txt
     ! Typo

   * source/pp/pplib.c
     ! One global compiler variable declaraion removed, because the same
       variable was also declared in macro.lib.

20000330-23:04 GMT+1 Maurilio Longo <maurilio.longo@libero.it>

	* include/hbvmpub.h
	  ! with OS/2 GCC pragma pack(8) is not valid
	* source/rtl/gtos2/gtos2.c
	  * with OS/2 GCC kbhit() is not available (it's a ToolKit function)  	

20000330-12:15 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/dates.c
     * account for possible overflow in calculation
   * source/rtl/defpath.c
     * initialise size to 0
   * source/rtl/environ.c
     * added missing ; for msc branch
   * source/rtl/isprint.c
     * added msc8 support (== _BORLANDC_)
   * source/rtl/dir.c
   * source/rtl/gtdos/gtdos.c
   * source/rtl/gtdos/mousedos.c
     * modified to work with msc8 (upcoming addition!)
   * include/hbvmpub.h
     * change alignment of HB_SYMB for msc8
   * source/rdd/dbcmd.c
     * changed if(!(...)) to if((...)==0) in rddInherit for /W4 compiler warning.
     * initialise uiArraylen in AFIELDS()
     * initialise ulNext in defEval()